--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -26,12 +26,12 @@ jobs:
         uses: actions/cache@v2
         with:
           path: ~/.cache/pip
-          key: ${{ matrix.python-version }}|${{ hashFiles('requirements/**') }}
+          key: ${{ matrix.python-version }}|${{ hashFiles('requirements.txt') }}
 
       - name: 📦 Install dependencies
         run: |
           python -m pip install --upgrade pip
-          pip install -r requirements/development.txt
+          pip install -r requirements.txt
 
       - name: 🚦 Run tests
         run: |
